[package]
name = "pp"
version = "0.1.0"
authors = ["tobias.subklewe <tobias@lyckligtax.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
glob = "0.3.0"
cfg-if = "0.1"

[dev-dependencies]
mockall = "0.7.1"
tempfile = "3.1.0"
